src/objects/Pre_Admission_Assessment__c.object
<CustomObject>
    <fields>
        <fullName>Contributing_factors__c</fullName>
        <label>Contributing factors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deterioration in family functions</fullName>
                </value>
                <value>
                    <fullName>Personality changes</fullName>
                </value>
                <value>
                    <fullName>Impaired Ability to manage self</fullName>
                </value>
                <value>
                    <fullName>Isolates from family/friends</fullName>
                </value>
                <value>
                    <fullName>Deterioration of health</fullName>
                </value>
                <value>
                    <fullName>Work or school problems</fullName>
                </value>
                <value>
                    <fullName>Possible divorce/break up</fullName>
                </value>
                <value>
                    <fullName>Financial problems</fullName>
                </value>
                <value>
                    <fullName>Severe mood changes</fullName>
                </value>
                <value>
                    <fullName>Legal issues</fullName>
                </value>
                <value>
                    <fullName>Hazardous situations</fullName>
                </value>
                <value>
                    <fullName>Impulse control diminished</fullName>
                </value>
                <value>
                    <fullName>Increased use</fullName>
                </value>
                <value>
                    <fullName>Intervention</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Covid_Testing_When_Where_Results__c</fullName>
        <label>Covid Testing (When, Where, Results)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Craving_when_not_using__c</fullName>
        <label>Craving (when not using)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Severe</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Considerable</fullName>
                </value>
                <value>
                    <fullName>Somewhat</fullName>
                </value>
                <value>
                    <fullName>Not at All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Financial_Status__c</fullName>
        <label>Current Financial Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Job_Status__c</fullName>
        <label>Current Job Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employed</fullName>
                </value>
                <value>
                    <fullName>Unemployed</fullName>
                </value>
                <value>
                    <fullName>Self Employed</fullName>
                </value>
                <value>
                    <fullName>Disability</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Military</fullName>
                </value>
                <value>
                    <fullName>Homemaker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Past_Medical_Conditions__c</fullName>
        <label>Current/Past Medical Conditions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cardiac</fullName>
                </value>
                <value>
                    <fullName>Hypertension</fullName>
                </value>
                <value>
                    <fullName>Liver Disease</fullName>
                </value>
                <value>
                    <fullName>Neurological</fullName>
                </value>
                <value>
                    <fullName>Infectious Disease</fullName>
                </value>
                <value>
                    <fullName>Surgery</fullName>
                </value>
                <value>
                    <fullName>Glasses, Dentures, Hearing Aid</fullName>
                </value>
                <value>
                    <fullName>Allergies</fullName>
                </value>
                <value>
                    <fullName>Diabetes</fullName>
                </value>
                <value>
                    <fullName>Gastrointestinal</fullName>
                </value>
                <value>
                    <fullName>Kidney Disease</fullName>
                </value>
                <value>
                    <fullName>Musculoskeletal</fullName>
                </value>
                <value>
                    <fullName>Artificial Limbs</fullName>
                </value>
                <value>
                    <fullName>Skin Rashes, Bruises, Lacerations</fullName>
                </value>
                <value>
                    <fullName>Weight Reduction Surgery</fullName>
                </value>
                <value>
                    <fullName>Poor Sleep</fullName>
                </value>
                <value>
                    <fullName>Poor Appetite</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Patient Denies</fullName>
                </value>
                <value>
                    <fullName>STD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_or_Post_Acute_Withdrawal_Symptom__c</fullName>
        <label>Current or Post Acute Withdrawal Symptom</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No symptoms</fullName>
                </value>
                <value>
                    <fullName>Anxiety</fullName>
                </value>
                <value>
                    <fullName>Body Aches</fullName>
                </value>
                <value>
                    <fullName>Tremors</fullName>
                </value>
                <value>
                    <fullName>Diarrhea</fullName>
                </value>
                <value>
                    <fullName>Runny Nose</fullName>
                </value>
                <value>
                    <fullName>Muscle Pain</fullName>
                </value>
                <value>
                    <fullName>Nausea/Vomiting</fullName>
                </value>
                <value>
                    <fullName>Headache</fullName>
                </value>
                <value>
                    <fullName>Restlessness</fullName>
                </value>
                <value>
                    <fullName>Sweats</fullName>
                </value>
                <value>
                    <fullName>Irritability</fullName>
                </value>
                <value>
                    <fullName>Abdomen Cramps</fullName>
                </value>
                <value>
                    <fullName>No symptoms of withdrawal due to being currently under the influence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_and_Time_of_Assessment__c</fullName>
        <label>Date and Time of Assessment</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_last_visit_with_PCP__c</fullName>
        <label>Date of last visit with PCP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delirium_Tremors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delirium Tremors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Depression__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Depression</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Describe_above_current_past_medical_hx__c</fullName>
        <label>Describe above current/past medical hx</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Describe_further_on_answers_above_lives__c</fullName>
        <inlineHelpText>(patient lives with, number of children, ages and household drug use?</inlineHelpText>
        <label>Describe further on answers above:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Describe_the_above_contributing__c</fullName>
        <inlineHelpText>(evidence of high risk behaviors, financial problems, increased use etc.)</inlineHelpText>
        <label>Describe the above</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Dilerium Tremors Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deterioration_in_Family_Function__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deterioration in Family Function</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deterioration_of_Health__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deterioration of Health</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deton_Complications_Patient_Denies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Patient Denies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Detox_Complications_Blackouts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blackouts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Detox_Complications_Dilerium_Tremors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dilerium Tremors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Detox_Complications_Hallucinations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hallucinations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Detox_Complications_Patient_Denies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Patient Denies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Detox_Complications_Seizures__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Seizures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diarrhea__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diarrhea</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_you_feel_hopeless__c</fullName>
        <label>Do you feel hopeless?</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_feel_your_life_has_purpose__c</fullName>
        <label>Do you feel your life has purpose?</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_have_FMLA_or_work_leave_documents__c</fullName>
        <label>Do you have FMLA or work leave documents</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_have_any_Allergies__c</fullName>
        <description>Do you have any allergies?  Medication? Food?</description>
        <label>Do you have any Allergies?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_have_any_open_wounds__c</fullName>
        <label>Do you have any open wounds</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_have_feelings_of_guilt_shame__c</fullName>
        <inlineHelpText>Do you have feelings of guilt/shame due to addiction?</inlineHelpText>
        <label>Do you have feelings of guilt/shame?</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_require_any_mobility_assistance__c</fullName>
        <label>Do you require any mobility assistance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_require_assist_with_daily_routine__c</fullName>
        <label>Do you require assist with daily routine</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_use_any_medical_devices__c</fullName>
        <label>Do you use any medical devices?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_patient_have_any_allergies__c</fullName>
        <label>Does patient have any allergies?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_patient_have_sober_supports__c</fullName>
        <inlineHelpText>Willing to be involved in the treatment process</inlineHelpText>
        <label>Does patient have sober supports?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eating_Disorder_Details__c</fullName>
        <label>Eating Disorder Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Name__c</fullName>
        <label>Emergency Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Phone__c</fullName>
        <label>Emergency Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Relationship__c</fullName>
        <label>Emergency Contact Relationship</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact__c</fullName>
        <label>Emergency Contact</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <label>Employer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Excessive_Debt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Excessive Debt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_Problems__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financial Problems</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flu_like_Symptoms__c</fullName>
        <label>Flu-like Symptoms?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Patient Denies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Had_flu_like_symptoms_in_last_14_days__c</fullName>
        <label>Had flu-like symptoms in last 14 days?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fever</fullName>
                </value>
                <value>
                    <fullName>Body Aches</fullName>
                </value>
                <value>
                    <fullName>Sore Throat</fullName>
                </value>
                <value>
                    <fullName>Shortness of breath</fullName>
                </value>
                <value>
                    <fullName>Other not listed</fullName>
                </value>
                <value>
                    <fullName>Patient denies any flu-like symptoms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Halluc_Synth_Age_of_first_use__c</fullName>
        <label>Halluc/Synth Age of first use</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Halluc_Synth_Amount_Commonly_Used__c</fullName>
        <label>Halluc/Synth Amount Commonly Used</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Halluc_Synth_Comment_Details__c</fullName>
        <label>Halluc/Synth Comment/Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Halluc_Synth_Date_of_Last_Use__c</fullName>
        <label>Halluc/Synth Date of Last Use</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Halluc_Synth_Duration__c</fullName>
        <label>Halluc/Synth Duration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>less than a month</fullName>
                </value>
                <value>
                    <fullName>less than 3 months</fullName>
                </value>
                <value>
                    <fullName>less than 6 months</fullName>
                </value>
                <value>
                    <fullName>less than a year</fullName>
                </value>
                <value>
                    <fullName>more than a year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Halluc_Synth_How_Often__c</fullName>
        <label>Halluc/Synth How Often</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>daily</fullName>
                </value>
                <value>
                    <fullName>1x per week</fullName>
                </value>
                <value>
                    <fullName>2x per week</fullName>
                </value>
                <value>
                    <fullName>3x per week</fullName>
                </value>
                <value>
                    <fullName>4x per week</fullName>
                </value>
                <value>
                    <fullName>1x per month or less</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Halluc_Synth_Route__c</fullName>
        <label>Halluc/Synth Route</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IV</fullName>
                </value>
                <value>
                    <fullName>Nasal</fullName>
                </value>
                <value>
                    <fullName>Oral</fullName>
                </value>
                <value>
                    <fullName>Smoke</fullName>
                </value>
                <value>
                    <fullName>Patient denies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hallucinations_Details__c</fullName>
        <label>Hallucinations Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hallucinations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hallucinations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hallucinogens_Synthetics_Details__c</fullName>
        <label>Hallucinogens/Synthetics Details</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Drug of Choice</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Patient Denies</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hard_Liquor_Comment_Details__c</fullName>
        <label>Hard Liquor Comment/Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hard_Liquor_Details__c</fullName>
        <label>Hard Liquor Details</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Drug of Choice</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Patient Denies</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hard_Liquor_Duration__c</fullName>
        <label>Hard Liquor Duration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>less than a month</fullName>
                </value>
                <value>
                    <fullName>less than 3 months</fullName>
                </value>
                <value>
                    <fullName>less than 6 months</fullName>
                </value>
                <value>
                    <fullName>less than a year</fullName>
                </value>
                <value>
                    <fullName>more than a year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hard_Liquor_Route__c</fullName>
        <label>Hard Liquor Route</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IV</fullName>
                </value>
                <value>
                    <fullName>Nasal</fullName>
                </value>
                <value>
                    <fullName>Oral</fullName>
                </value>
                <value>
                    <fullName>Smoke</fullName>
                </value>
                <value>
                    <fullName>Patient Denies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hard_Liquor_age_of_first_use__c</fullName>
        <label>Hard Liquor age of first use</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hard_Liquor_amount_commonly_used__c</fullName>
        <label>Hard Liquor amount commonly used</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hard_Liquor_how_often__c</fullName>
        <label>Hard Liquor how often</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>daily</fullName>
                </value>
                <value>
                    <fullName>1x per week</fullName>
                </value>
                <value>
                    <fullName>2x per week</fullName>
                </value>
                <value>
                    <fullName>3x per week</fullName>
                </value>
                <value>
                    <fullName>4x per week</fullName>
                </value>
                <value>
                    <fullName>1x a month or less</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hard_Liquor_last_used__c</fullName>
        <label>Hard Liquor last used</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Has_patient_experienced_seizures__c</fullName>
        <label>Has patient experienced seizures?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_patient_traveled_from_the_following__c</fullName>
        <label>Has patient traveled from level 3 zone?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Washington State</fullName>
                </value>
                <value>
                    <fullName>A cruise in the last 14 days</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
                <value>
                    <fullName>Other not listed</fullName>
                </value>
                <value>
                    <fullName>Patient denies travel to any level 3 zones</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_the_patient_had_any_overdoses_30days__c</fullName>
        <label>Has the patient had any overdoses?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_the_patient_had_any_overdoses_InLife__c</fullName>
        <label>Has the patient had any overdoses?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_been_diagnosed_with_following__c</fullName>
        <label>Have you been diagnosed with following?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anxiety</fullName>
                </value>
                <value>
                    <fullName>PTSD</fullName>
                </value>
                <value>
                    <fullName>Depression</fullName>
                </value>
                <value>
                    <fullName>ADD/ADHD</fullName>
                </value>
                <value>
                    <fullName>Bipolar</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Patient does not wish to disclose at this time</fullName>
                </value>
                <value>
                    <fullName>Patient does not recall</fullName>
                </value>
                <value>
                    <fullName>Patient Denies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_been_hospitalized_last_30_dayes__c</fullName>
        <label>Have you been hospitalized last 30 days</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_been_in_recovery_in_the_past__c</fullName>
        <label>Have you been in recovery in the past?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_been_tested_for_Covid19__c</fullName>
        <label>Have you been tested for Covid19?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Patient Denies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_been_to_the_treatment_before__c</fullName>
        <inlineHelpText>If you have been to treatment before, what will be different this time?</inlineHelpText>
        <label>Have you been to the treatment before?</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>